--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="sudan-ball.png" alt="Sudan Football" />
           </div>
         </div>
-      </div>
+  </div>
 </header>
 
     <!-- Menu Overlay -->
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الاحد 07/12</h1>
+          <h1 class="match-title">تمرين الخميس 12/11</h1>
           <div class="match-details">
-            <span class="time">Strikers 03:25 PM</span>
+            <span class="time">ASV 09:00 PM</span>
           </div>
         </div>
 
@@ -200,30 +200,42 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">عصام</div>
+                <div class="player-name">ابو القاسم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">عثمان</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">4</div>
                 <div class="player-name">سنده</div>
               </div>
               <div class="player-card">
+                <div class="player-number">4</div>
+                <div class="player-name">عبدالرحمن</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">وادفور</div>
+                <div class="player-name">ايزي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">سليمان</div>
+                <div class="player-name">ابراهيم</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">فيصل</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">8</div>
+                <div class="player-name">الرشيد</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">9</div>
+                <div class="player-name">انور | رزقه</div>
               </div>
             </div>
-          </div>
+        </div>
 
           <!-- Red Team -->
           <div class="team-card red-team">
@@ -236,27 +248,39 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">وائل</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">ابراهيم</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">4</div>
                 <div class="player-name">ابن بطوطه</div>
               </div>
               <div class="player-card">
+                <div class="player-number">4</div>
+                <div class="player-name">محمد عوض</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">الرشيد</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه</div>
+                <div class="player-name">جرافي</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">وادفور</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">8</div>
+                <div class="player-name">عمر</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">9</div>
+                <div class="player-name">انور / رزقه</div>
               </div>
             </div>
           </div>
@@ -273,10 +297,13 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">لا يوجد</span>
+                <span class="bench-name">خالد</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">عباده</span>
               </div>
             </div>
-          </div>
+        </div>
 
           <div class="bench-card jerseys-card">
             <div class="bench-header">
@@ -285,7 +312,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">عثمان</span>
+                <span class="bench-name">وائل</span>
               </div>
             </div>
           </div>
@@ -346,7 +373,7 @@
             </tr>
             <tr>
                 <td>وائل</td>
-                <td><span class="status unmarked">-</span></td>
+                <td><span class="status due">!</span></td>
             </tr>
             <tr>
                 <td>انس</td>
@@ -358,7 +385,7 @@
             </tr>
             <tr>
                 <td>عثمان</td>
-              <td><span class="status due">!</span></td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
                 <td>محمد عوض</td>
