--- a/previous-matches.html
+++ b/previous-matches.html
@@ -36,6 +36,73 @@
     <main class="main-content">
       <!-- Previous Matches Section -->
       <section class="previous-matches-section">
+        <!-- Match - Strikers 07/12 (Red won 5-0) -->
+        <div class="match-card">
+          <div class="match-details">
+            <span class="match-date">الأحد 07/12/2024</span>
+            <span class="match-venue">Strikers 03:25 PM</span>
+          </div>
+
+          <div class="teams-row">
+            <div class="team-name red-team">الفريق الأحمر</div>
+            <div class="team-name yellow-team">الفريق الأصفر</div>
+          </div>
+
+          <div class="score-row">
+            <div class="score red-score">5</div>
+            <div class="score-separator">-</div>
+            <div class="score yellow-score">0</div>
+            <div class="score-label">النتيجه</div>
+          </div>
+
+          <div class="players-section">
+            <div class="players-column red-team-column">
+              <div class="player-row red-player">
+                <span class="player-name">سليمان</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">سنده</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">الرشيد</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">جرافي</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">عصام</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">رزقه | وادفور</span>
+              </div>
+            </div>
+            <div class="players-column yellow-team-column">
+              <div class="player-row yellow-player">
+                <span class="player-name">سلمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">ابن بطوطه</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">عثمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">ابراهيم</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">جاتشن</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">رزقه | وادفور</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="jerseys-row">
+            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i> عثمان</span>
+          </div>
+        </div>
+
         <!-- Match - Strikers 13/12 (Yellow won 4-0) -->
         <div class="match-card">
           <div class="match-details">
