--- a/previous-matches.html
+++ b/previous-matches.html
@@ -58,42 +58,42 @@
           <div class="players-section">
             <div class="players-column red-team-column">
               <div class="player-row red-player">
-                <span class="player-name">سليمان</span>
+                <span class="player-name">سلمان</span>
               </div>
               <div class="player-row red-player">
-                <span class="player-name">سنده</span>
+                <span class="player-name">ابن بطوطه</span>
               </div>
               <div class="player-row red-player">
                 <span class="player-name">الرشيد</span>
               </div>
               <div class="player-row red-player">
-                <span class="player-name">جرافي</span>
+                <span class="player-name">ابراهيم</span>
               </div>
               <div class="player-row red-player">
-                <span class="player-name">عصام</span>
+                <span class="player-name">جاتشن</span>
               </div>
               <div class="player-row red-player">
-                <span class="player-name">رزقه | وادفور</span>
+                <span class="player-name">رزقه</span>
               </div>
             </div>
             <div class="players-column yellow-team-column">
               <div class="player-row yellow-player">
-                <span class="player-name">سلمان</span>
+                <span class="player-name">سلميان</span>
               </div>
               <div class="player-row yellow-player">
-                <span class="player-name">ابن بطوطه</span>
+                <span class="player-name">سنده</span>
               </div>
               <div class="player-row yellow-player">
                 <span class="player-name">عثمان</span>
               </div>
               <div class="player-row yellow-player">
-                <span class="player-name">ابراهيم</span>
+                <span class="player-name">جرافي</span>
               </div>
               <div class="player-row yellow-player">
-                <span class="player-name">جاتشن</span>
+                <span class="player-name">عصام</span>
               </div>
               <div class="player-row yellow-player">
-                <span class="player-name">رزقه | وادفور</span>
+                <span class="player-name">وادفور</span>
               </div>
             </div>
           </div>
