--- a/index.html
+++ b/index.html
@@ -302,6 +302,13 @@
               <div class="bench-player">
                 <span class="bench-name">عباده</span>
               </div>
+              <div class="bench-player">
+                <span class="bench-name">منذر</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">رياني</span>
+              </div>
+            </div>
             </div>
         </div>
 
