--- a/previous-matches.html
+++ b/previous-matches.html
@@ -99,7 +99,7 @@
           </div>
 
           <div class="jerseys-row">
-            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i> عثمان</span>
+            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i>رزقه</span>
           </div>
         </div>
 
