--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">ابراهيم</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
@@ -264,11 +264,11 @@
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">خالد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
@@ -296,12 +296,6 @@
               <h3>احتياط</h3>
             </div>
             <div class="bench-players">
-              <div class="bench-player">
-                <span class="bench-name">خالد</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">عباده</span>
-              </div>
               <div class="bench-player">
                 <span class="bench-name">منذر</span>
               </div>
