--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الخميس 12/11</h1>
+          <h1 class="match-title">تمرين الاحد 14/12</h1>
           <div class="match-details">
-            <span class="time">ASV 09:00 PM</span>
+            <span class="time">Strikers 02:30 PM</span>
           </div>
         </div>
 
@@ -200,39 +200,27 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">اواب</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">ابو القاسم</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">سنده</div>
+                <div class="player-name">عثمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">عبدالرحمن</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">ايزي</div>
+                <div class="player-name">معاذ</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">جرافي</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">7</div>
-                <div class="player-name">فيصل</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">8</div>
-                <div class="player-name">الرشيد</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">9</div>
-                <div class="player-name">انور | رزقه</div>
+                <div class="player-name">رزقه | احمد بشير</div>
               </div>
             </div>
         </div>
@@ -248,39 +236,27 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سليمان</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">2</div>
-                <div class="player-name">وائل</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">3</div>
-                <div class="player-name">ابن بطوطه</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">4</div>
-                <div class="player-name">محمد عوض</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">5</div>
                 <div class="player-name">خالد</div>
               </div>
               <div class="player-card">
-                <div class="player-number">6</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-number">2</div>
+                <div class="player-name">سايمان</div>
               </div>
               <div class="player-card">
-                <div class="player-number">7</div>
+                <div class="player-number">3</div>
                 <div class="player-name">وادفور</div>
               </div>
               <div class="player-card">
-                <div class="player-number">8</div>
-                <div class="player-name">عمر</div>
+                <div class="player-number">4</div>
+                <div class="player-name">عصام</div>
               </div>
               <div class="player-card">
-                <div class="player-number">9</div>
-                <div class="player-name">انور / رزقه</div>
+                <div class="player-number">5</div>
+                <div class="player-name">جرافي</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">6</div>
+                <div class="player-name">رزقه | احمد بشير</div>
               </div>
             </div>
           </div>
@@ -297,10 +273,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">منذر</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">رياني</span>
+                <span class="bench-name">لا يوجد</span>
               </div>
             </div>
             </div>
@@ -313,7 +286,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">وائل</span>
+                <span class="bench-name">جرافي</span>
               </div>
             </div>
           </div>
@@ -374,7 +347,7 @@
             </tr>
             <tr>
                 <td>وائل</td>
-                <td><span class="status due">!</span></td>
+                <td><span class="status done">✓</span></td>
             </tr>
             <tr>
                 <td>انس</td>
@@ -406,7 +379,7 @@
             </tr>
             <tr>
                 <td>جرافي</td>
-              <td><span class="status unmarked">-</span></td>
+              <td><span class="status due">!</span></td>
             </tr>
             <tr>
                 <td>الشيخ</td>
