--- a/previous-matches.html
+++ b/previous-matches.html
@@ -36,6 +36,91 @@
     <main class="main-content">
       <!-- Previous Matches Section -->
       <section class="previous-matches-section">
+        <!-- Match - ASV 12/11 (Red won 1-0) -->
+        <div class="match-card">
+          <div class="match-details">
+            <span class="match-date">الخميس 12/11/2024</span>
+            <span class="match-venue">ASV 09:00 PM</span>
+          </div>
+
+          <div class="teams-row">
+            <div class="team-name red-team">الفريق الأحمر</div>
+            <div class="team-name yellow-team">الفريق الأصفر</div>
+          </div>
+
+          <div class="score-row">
+            <div class="score red-score">1</div>
+            <div class="score-separator">-</div>
+            <div class="score yellow-score">0</div>
+            <div class="score-label">النتيجه</div>
+          </div>
+
+          <div class="players-section">
+            <div class="players-column red-team-column">
+              <div class="player-row red-player">
+                <span class="player-name">سليمان</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">وائل</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">ابن بطوطه</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">محمد عوض</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">خالد</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">جاتشن</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">وادفور</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">عمر</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">انور</span>
+              </div>
+            </div>
+            <div class="players-column yellow-team-column">
+              <div class="player-row yellow-player">
+                <span class="player-name">سلمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">ابو القاسم</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">سنده</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">عبدالرحمن</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">ايزي</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">جرافي</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">فيصل</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">الرشيد</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">رزقه</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="jerseys-row">
+            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i> رزقه</span>
+          </div>
+        </div>
+        
         <!-- Match - Strikers 07/12 (Red won 5-0) -->
         <div class="match-card">
           <div class="match-details">
