--- a/previous-matches.html
+++ b/previous-matches.html
@@ -36,6 +36,73 @@
     <main class="main-content">
       <!-- Previous Matches Section -->
       <section class="previous-matches-section">
+        <!-- Match - Strikers 14/12 (Yellow won 11-0) -->
+        <div class="match-card">
+          <div class="match-details">
+            <span class="match-date">الأحد 14/12/2024</span>
+            <span class="match-venue">Strikers 02:30 PM</span>
+          </div>
+
+          <div class="teams-row">
+            <div class="team-name red-team">الفريق الأحمر</div>
+            <div class="team-name yellow-team">الفريق الأصفر</div>
+          </div>
+
+          <div class="score-row">
+            <div class="score red-score">0</div>
+            <div class="score-separator">-</div>
+            <div class="score yellow-score">11</div>
+            <div class="score-label">النتيجه</div>
+          </div>
+
+          <div class="players-section">
+            <div class="players-column red-team-column">
+              <div class="player-row red-player">
+                <span class="player-name">خالد</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">سايمان</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">وادفور</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">عصام</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">جرافي</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">رزقه</span>
+              </div>
+            </div>
+            <div class="players-column yellow-team-column">
+              <div class="player-row yellow-player">
+                <span class="player-name">اواب</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">سلمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">عثمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">جاتشن</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">معاذ</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">احمد بشير</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="jerseys-row">
+            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i> جرافي</span>
+          </div>
+        </div>
+
         <!-- Match - ASV 12/11 (Red won 1-0) -->
         <div class="match-card">
           <div class="match-details">
