--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الاحد 14/12</h1>
+          <h1 class="match-title">تمرين الاربع 17/12</h1>
           <div class="match-details">
-            <span class="time">Strikers 02:30 PM</span>
+            <span class="time">ASV 06:00 PM</span>
           </div>
         </div>
 
@@ -200,7 +200,7 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">اواب</div>
+                <div class="player-name">الشيخ</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
@@ -208,19 +208,31 @@
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">عثمان</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">عبدالرحمن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">معاذ</div>
+                <div class="player-name">خالد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | احمد بشير</div>
+                <div class="player-name">ابوالقاسم</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">جاتشن</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">8</div>
+                <div class="player-name">فيصل</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">9</div>
+                <div class="player-name">رزقه | وادفور</div>
               </div>
             </div>
         </div>
@@ -236,27 +248,39 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">خالد</div>
+                <div class="player-name">سندا</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">سايمان</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">وادفور</div>
+                <div class="player-name">ابراهيم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">عصام</div>
+                <div class="player-name">محمد عوض</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">اواب</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | احمد بشير</div>
+                <div class="player-name">الرشيد</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">ابراهيم معتصم</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">8</div>
+                <div class="player-name">احمد عبدالله</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">9</div>
+                <div class="player-name">رزقه | وادفور</div>
               </div>
             </div>
           </div>
@@ -286,7 +310,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">جرافي</span>
+                <span class="bench-name">سلمان</span>
               </div>
             </div>
           </div>
@@ -346,8 +370,16 @@
               <td><span class="status done">✓</span></td>
             </tr>
             <tr>
+              <td>جرافي</td>
+            <td><span class="status done">✓</span></td>
+          </tr>
+          <tr>
+            <td>سلمان</td>
+            <td><span class="status due">!</span></td>
+          </tr>
+            <tr>
                 <td>وائل</td>
-                <td><span class="status done">✓</span></td>
+                <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
                 <td>انس</td>
@@ -378,10 +410,6 @@
                 <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
-                <td>جرافي</td>
-              <td><span class="status due">!</span></td>
-            </tr>
-            <tr>
                 <td>الشيخ</td>
                 <td><span class="status unmarked">-</span></td>
             </tr>
@@ -394,10 +422,6 @@
                 <td>عصام</td>
                 <td><span class="status unmarked">-</span></td>
             </tr>
-            <tr>
-                <td>سلمان</td>
-                <td><span class="status unmarked">-</span></td>
-              </tr>
               <tr>
                 <td>ابراهيم مضوي</td>
                 <td><span class="status unmarked">-</span></td>
