--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الاربع 17/12</h1>
+          <h1 class="match-title">تمرين الثلاثاء 23/12</h1>
           <div class="match-details">
-            <span class="time">ASV 06:00 PM</span>
+            <span class="time">ASV 07:00 PM</span>
           </div>
         </div>
 
@@ -200,35 +200,35 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">الشيخ</div>
+                <div class="player-name">سندا</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">جمعه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">حسام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">عبدالرحمن</div>
+                <div class="player-name">عثمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">خالد</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">ابوالقاسم</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">عصام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">فيصل</div>
+                <div class="player-name">ابراهيم معتصم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
@@ -248,35 +248,35 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سندا</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">2</div>
-                <div class="player-name">سليمان</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">3</div>
-                <div class="player-name">ابراهيم</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">4</div>
                 <div class="player-name">محمد عوض</div>
               </div>
               <div class="player-card">
+                <div class="player-number">2</div>
+                <div class="player-name">خالد</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">3</div>
+                <div class="player-name">ابوالقاسم</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">4</div>
+                <div class="player-name">التجاني</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">اواب</div>
+                <div class="player-name">ابراهيم مضوي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">الرشيد</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">ابراهيم معتصم</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">احمد عبدالله</div>
+                <div class="player-name">يوسف</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
@@ -310,7 +310,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">سلمان</span>
+                <span class="bench-name">محمد عوض</span>
               </div>
             </div>
           </div>
@@ -373,10 +373,14 @@
               <td>جرافي</td>
             <td><span class="status done">✓</span></td>
           </tr>
-          <tr>
+            <tr>
             <td>سلمان</td>
-            <td><span class="status due">!</span></td>
+            <td><span class="status done">✓</span></td>
           </tr>
+          <tr>
+            <td>محمد عوض</td>
+          <td><span class="status due">!</span></td>
+        </tr>
             <tr>
                 <td>وائل</td>
                 <td><span class="status unmarked">-</span></td>
@@ -392,10 +396,6 @@
             <tr>
                 <td>عثمان</td>
                 <td><span class="status unmarked">-</span></td>
-            </tr>
-            <tr>
-                <td>محمد عوض</td>
-              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
                 <td>رياني</td>
