--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الثلاثاء 23/12</h1>
+          <h1 class="match-title">تمرين الأحد 12/1</h1>
           <div class="match-details">
-            <span class="time">ASV 07:00 PM</span>
+            <span class="time">ASV 02:30 PM</span>
           </div>
         </div>
 
@@ -200,7 +200,7 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سندا</div>
+                <div class="player-name">اواب</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
@@ -208,27 +208,27 @@
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">حسام</div>
+                <div class="player-name">ابوالقاسم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">عثمان</div>
+                <div class="player-name">حسام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">كاتشنغ</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">الرشيد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">عصام</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">ابراهيم معتصم</div>
+                <div class="player-name">احمد صالح</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
@@ -248,35 +248,35 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">محمد عوض</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">2</div>
                 <div class="player-name">خالد</div>
               </div>
               <div class="player-card">
+                <div class="player-number">2</div>
+                <div class="player-name">سندا</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">ابوالقاسم</div>
+                <div class="player-name">علي محمود</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">التجاني</div>
+                <div class="player-name">عثمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">ابراهيم مضوي</div>
+                <div class="player-name">جاك</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">سليمان</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">يوسف</div>
+                <div class="player-name">عصام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
@@ -297,7 +297,14 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">لا يوجد</span>
+                <span class="bench-name">محمد نبيل</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">الشيخ</span>
+                
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">ابراهيم معتصم</span>
               </div>
             </div>
             </div>
@@ -310,7 +317,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">محمد عوض</span>
+                <span class="bench-name">عثمان</span>
               </div>
             </div>
           </div>
@@ -377,10 +384,14 @@
             <td>سلمان</td>
             <td><span class="status done">✓</span></td>
           </tr>
-          <tr>
-            <td>محمد عوض</td>
-          <td><span class="status due">!</span></td>
-        </tr>
+            <tr>
+                <td>محمد عوض</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>عثمان</td>
+              <td><span class="status due">!</span></td>
+          </tr>
             <tr>
                 <td>وائل</td>
                 <td><span class="status unmarked">-</span></td>
@@ -393,10 +404,7 @@
                 <td>فيصل</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
-            <tr>
-                <td>عثمان</td>
-                <td><span class="status unmarked">-</span></td>
-            </tr>
+            
             <tr>
                 <td>رياني</td>
                 <td><span class="status unmarked">-</span></td>
