--- a/previous-matches.html
+++ b/previous-matches.html
@@ -36,6 +36,91 @@
     <main class="main-content">
       <!-- Previous Matches Section -->
       <section class="previous-matches-section">
+        <!-- Match - ASV 23/12 (Yellow won 2-0) -->
+        <div class="match-card">
+          <div class="match-details">
+            <span class="match-date">الثلاثاء 23/12/2024</span>
+            <span class="match-venue">ASV 07:00 PM</span>
+          </div>
+
+          <div class="teams-row">
+            <div class="team-name red-team">الفريق الأحمر</div>
+            <div class="team-name yellow-team">الفريق الأصفر</div>
+          </div>
+
+          <div class="score-row">
+            <div class="score red-score">0</div>
+            <div class="score-separator">-</div>
+            <div class="score yellow-score">2</div>
+            <div class="score-label">النتيجه</div>
+          </div>
+
+          <div class="players-section">
+            <div class="players-column red-team-column">
+              <div class="player-row red-player">
+                <span class="player-name">محمد عوض</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">خالد</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">ابوالقاسم</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">التجاني</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">ابراهيم مضوي</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">سليمان</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">جاتشن</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">يوسف</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">وادفور</span>
+              </div>
+            </div>
+            <div class="players-column yellow-team-column">
+              <div class="player-row yellow-player">
+                <span class="player-name">سندا</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">جمعه</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">حسام</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">عثمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">جرافي</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">سلمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">عصام</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">ابراهيم معتصم</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">رزقه</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="jerseys-row">
+            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i> محمد عوض</span>
+          </div>
+        </div>
+
         <!-- Match - ASV 17/12 (Yellow won 1-0) -->
         <div class="match-card">
           <div class="match-details">
