--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">محمد نبيل</span>
+                <span class="bench-name">محمد نايل</span>
               </div>
               <div class="bench-player">
                 <span class="bench-name">الشيخ</span>
