--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الأحد 28/12</h1>
+          <h1 class="match-title">تمرين الأربعاء 31/12</h1>
           <div class="match-details">
             <span class="time">ASV 02:30 PM</span>
           </div>
@@ -200,19 +200,19 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">اواب</div>
+                <div class="player-name">سندا</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">جمعه</div>
+                <div class="player-name">عبدالرحمن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">ابوالقاسم</div>
+                <div class="player-name">رياني</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">حسام</div>
+                <div class="player-name">جاك</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
@@ -220,15 +220,15 @@
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">الرشيد</div>
+                <div class="player-name">خالد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">عصام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">احمد صالح</div>
+                <div class="player-name">احمد عبدالله</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
@@ -248,15 +248,15 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">خالد</div>
+                <div class="player-name">مصطفى</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">سندا</div>
+                <div class="player-name">محمد عوض</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">علي محمود</div>
+                <div class="player-name">ابوالقاسم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
@@ -264,19 +264,19 @@
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">جاك</div>
+                <div class="player-name">محمد نايل</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">اواب</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">سليمان</div>
+                <div class="player-name">ابراهيم معتصم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">عصام</div>
+                <div class="player-name">جمعه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
@@ -297,14 +297,14 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">محمد نايل</span>
+                <span class="bench-name">جوهر</span>
               </div>
               <div class="bench-player">
-                <span class="bench-name">الشيخ</span>
+                <span class="bench-name">ابراهيم مضوي</span>
                 
               </div>
               <div class="bench-player">
-                <span class="bench-name">ابراهيم معتصم</span>
+                <span class="bench-name">سلمان</span>
               </div>
             </div>
             </div>
@@ -386,6 +386,10 @@
           </tr>
             <tr>
                 <td>محمد عوض</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>جاتشنغ</td>
               <td><span class="status done">✓</span></td>
             </tr>
             <tr>
