--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">عصام</div>
+                <div class="player-name">جوهر</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
@@ -296,9 +296,6 @@
               <h3>احتياط</h3>
             </div>
             <div class="bench-players">
-              <div class="bench-player">
-                <span class="bench-name">جوهر</span>
-              </div>
               <div class="bench-player">
                 <span class="bench-name">ابراهيم مضوي</span>
                 
