--- a/index.html
+++ b/index.html
@@ -204,19 +204,19 @@
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">مصطفى</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">3</div>
                 <div class="player-name">عثمان</div>
               </div>
               <div class="player-card">
+                <div class="player-number">3</div>
+                <div class="player-name">وادفور</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">وادفور</div>
+                <div class="player-name">سموال</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
@@ -248,11 +248,11 @@
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جوهر</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">جوهر</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
@@ -272,6 +272,12 @@
               <h3>احتياط</h3>
             </div>
             <div class="bench-players">
+              <div class="bench-player">
+                <span class="bench-name">عصام</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">قايد</span>
+              </div>
             </div>
             </div>
         </div>
