--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سليمان</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
@@ -236,7 +236,7 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">عصام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
@@ -272,9 +272,6 @@
               <h3>احتياط</h3>
             </div>
             <div class="bench-players">
-              <div class="bench-player">
-                <span class="bench-name">عصام</span>
-              </div>
               <div class="bench-player">
                 <span class="bench-name">قايد</span>
               </div>
