--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الأحد 18/01</h1>
+          <h1 class="match-title">تمرين الأربعاء 21/01</h1>
           <div class="match-details">
-            <span class="time">Strikers 02:30 PM</span>
+            <span class="time">ASV 09:30 PM</span>
           </div>
         </div>
 
@@ -200,27 +200,39 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">مصطفى</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">عثمان</div>
+                <div class="player-name">ابن بطوطه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">وادفور</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">محمد عوض</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">سموال</div>
+                <div class="player-name">ابراهيم معتصم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | احمد بشير</div>
+                <div class="player-name">جرافي</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">ابوالقاسم</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">8</div>
+                <div class="player-name">اواب</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">9</div>
+                <div class="player-name">احمد عبدالله</div>
               </div>
             </div>
         </div>
@@ -236,27 +248,39 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">عصام</div>
+                <div class="player-name">سندا</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">وائل</div>
+                <div class="player-name">ودفور</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">جاك</div>
+                <div class="player-name">مازن بس</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">محمد نايل</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">جوهر</div>
+                <div class="player-name">جاك</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | احمد بشير</div>
+                <div class="player-name">ابراهيم مضوي</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">الرشيد</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">8</div>
+                <div class="player-name">خالد</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">9</div>
+                <div class="player-name">قايد</div>
               </div>
             </div>
           </div>
@@ -273,7 +297,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">قايد</span>
+                <span class="bench-name">حسام</span>
               </div>
             </div>
             </div>
@@ -286,7 +310,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">عثمان</span>
+                <span class="bench-name">ابوالقاسم</span>
               </div>
             </div>
           </div>
@@ -367,7 +391,11 @@
             </tr>
             <tr>
               <td>عثمان</td>
-              <td><span class="status due">!</span></td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>ابوالقاسم</td>
+            <td><span class="status due">!</span></td>
           </tr>
             <tr>
                 <td>وائل</td>
@@ -402,10 +430,7 @@
                 <td>ابراهيم مضوي</td>
                 <td><span class="status unmarked">-</span></td>
               </tr>
-              <tr>
-                <td>ابوالقاسم</td>
-              <td><span class="status unmarked">-</span></td>
-            </tr>
+             
             
           </tbody>
         </table>
